edited: create new club, event activity, event post, student login, signup, and its js and css codes

--- a/templates/pages/club-manager-interface/event-post.html
+++ b/templates/pages/club-manager-interface/event-post.html
@@ -15,14 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500&display=swap" rel="stylesheet">
     <title>ClubConnect | Create An Event Activity</title>
 </head>
-<body id="create">
+<body id="create-post-event">
     <div onclick="hideConfirmMessage()" class="blur" id="create-activity-blur"></div>
     <div class="confirm-message" id="activity-confirm-message">
         <h3>Confirm</h3>
         <p>Are you sure you want to create a new club?</p>
         <div class="yes-no-buttons">
             <button onclick="hideConfirmMessage()" class="no-btn" type="button">No</button>
-            <button class="yes-btn" type="button">Yes</button>
+            <button onclick="eventPostForm.submit()" class="yes-btn" type="submit">Yes</button>
         </div>
     </div>
    
@@ -37,31 +37,19 @@
       <div class="form-header">
         <h3>Submit Your Event Post Form</h3>
       </div>
-      <form action="" method="post">
+      <form action="" method="post" id="event-post-form">
+        {% csrf_token %}
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
-                <label for="p-cm-name">Club Manager Name:</label>
-            <input class="input-field" type="text" name="club manager name" id="p-cm-name" placeholder="e.g Nouhad El Hallab">
-            </div>
-            <div class="input-wrapper">
-                <label for="p-cvm-name">Club Vice Manager Name:</label>
-            <input class="input-field" type="text" name="club vice manager name" id="p-cvm-name" placeholder="e.g Mohammad Aburahma">
-            </div>
-            <div class="input-wrapper">
                 <label for="p-c-name">Club Name:</label>
-            <input class="input-field" type="text" name="clubname" id="p-c-name" placeholder="e.g Paddle Pros">
+            <input class="input-field" type="text" name="clubname" id="p-c-name" placeholder="e.g Paddle Pros" required>
             </div>
         </div>
         
         <div class="input-container gap-lg-5 gap-4">
-            <div class="input-wrapper me-lg-1">
-                <label for="p-p-number">Phone Number:</label>
-            <input class="input-field event-phone-input" type="text" name="phone number" id="p-p-number" placeholder="e.g +90 (512) 345 678 9">
-            <strong class="phone-error">Invalid Number</strong>
-            </div>
             <div class="input-wrapper ms-lg-5">
                 <label for="p-e-title">Event Title:</label>
-            <input class="input-field event-title-input" type="text" name="event-title" id="p-e-title" placeholder="Event Title">
+            <input class="input-field event-title-input" type="text" name="event-title" id="p-e-title" placeholder="Event Title" required>
             </div>
         </div>
         <h6>Event Post Image:</h6>
@@ -80,7 +68,7 @@
         
         <h6 class="mt-3">Event Description:</h6>
         <div class="description-container">
-            <textarea class="input-field event-description-input" name="description" id="p-e-description" placeholder="e.g The goal of this event..."></textarea>
+            <textarea class="input-field event-description-input" name="description" id="p-e-description" placeholder="e.g The goal of this event..." required></textarea>
             <strong class="description-error">The Description should be between 300-4000 letter</strong>
         </div>
         <button onclick="checkEventFormAndConfirm()" type="button" class="send-request-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit Request</button>
@@ -90,6 +78,7 @@
       <script src="{% static 'js/all.min.js' %}"></script>
       <script src="{% static 'js/navbar.js' %}"></script>
       <script src="{% static 'js/manager.js' %}"></script>
+      
 </body>
 </html>
 {% endblock content %}
