--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -612,6 +612,54 @@ padding: 10px 0;
   flex-wrap: wrap;
   gap: 20px;
 }
+.admin-rejection-purpose{
+  background-color: var(--dark-color);
+  position: absolute;
+  z-index: 999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 50px 20px 0 20px;
+  width: 60vw;
+  min-height: 60vh;
+  text-align: center;
+  color: var(--yellow-color);
+  display: none;
+}
+
+.submit-rej-btn{
+  border: none;
+  padding: 7px 65px;
+  margin-top: 20px;
+  background-color: var(--red-color);
+  color: var(--ligh-color);
+  border: solid 1px transparent;
+  transition: .3s ease;
+}
+.submit-rej-btn:hover{
+  background-color: transparent;
+  border: solid 1px var(--red-color);
+  color: var(--red-color);
+}
+#rej-perp{
+  width: 90%;
+  height: 150px;
+  padding: 10px;
+  resize: none;
+  outline: none;
+  margin-top: 20px;
+  border: solid 3px transparent;
+}
+#rej-perp:focus{
+  border: solid 3px var(--yellow-color);
+}
+.rejection-cancel{
+  font-size: 2rem;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+}
 /*End Admin Notification Style*/
 
 @media screen and (max-width: 1387px){
@@ -732,6 +780,9 @@ padding: 10px 0;
   .event-interface-container .fa-x{
       right: 7px;
   }
+  .admin-rejection-purpose{
+    width: 90vw;
+}
 }
 
   @media screen and (max-width: 480px){
