--- a/static/css/manager.css
+++ b/static/css/manager.css
@@ -161,8 +161,8 @@ form .input-wrapper select{
 }
 .blur{
     width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.594);
+    min-height: 100vh;
+    background-color: rgba(0, 0, 0, 0.829);
     position: fixed;
     top: 0;
     left: 0;
@@ -291,6 +291,7 @@ form .input-wrapper select{
     .description-container textarea{
         width: 75vw;
     }
+    
 }
 @media screen and (max-width: 536px){
     form .input-wrapper input{
