--- a/templates/pages/club-manager-interface/event-activity.html
+++ b/templates/pages/club-manager-interface/event-activity.html
@@ -15,14 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500&display=swap" rel="stylesheet">
     <title>ClubConnect | Create An Event Activity</title>
 </head>
-<body id="create">
+<body id="create-activity-event">
     <div onclick="hideConfirmMessage()" class="blur" id="create-activity-blur"></div>
     <div class="confirm-message" id="activity-confirm-message">
         <h3>Confirm</h3>
         <p>Are you sure you want to create a new club?</p>
         <div class="yes-no-buttons">
             <button onclick="hideConfirmMessage()" class="no-btn" type="button">No</button>
-            <button class="yes-btn" type="button">Yes</button>
+            <button onclick="eventActivityForm.submit()" class="yes-btn" type="button">Yes</button>
         </div>
     </div>
    
@@ -37,31 +37,32 @@
       <div class="form-header">
         <h3>Submit Your Event Activity Form</h3>
       </div>
-      <form action="" method="post">
+      <form action="" method="post" id="event-activity-form">
+        {% csrf_token %}
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
                 <label for="a-cm-name">Club Manager Name:</label>
-            <input class="input-field" type="text" name="club manager name" id="a-cm-name" placeholder="e.g Nouhad El Hallab">
+            <input class="input-field" type="text" name="club manager name" id="a-cm-name" placeholder="e.g Nouhad El Hallab" required>
             </div>
             <div class="input-wrapper">
                 <label for="a-cvm-name">Club Vice Manager Name:</label>
-            <input class="input-field" type="text" name="club vice manager name" id="a-cvm-name" placeholder="e.g Mohammad Aburahma">
+            <input class="input-field" type="text" name="club vice manager name" id="a-cvm-name" placeholder="e.g Mohammad Aburahma" required>
             </div>
             <div class="input-wrapper">
                 <label for="a-c-name">Club Name:</label>
-            <input class="input-field" type="text" name="clubname" id="a-c-name" placeholder="e.g Paddle Pros">
+            <input class="input-field" type="text" name="clubname" id="a-c-name" placeholder="e.g Paddle Pros" required>
             </div>
         </div>
 
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4">
             <div class="input-wrapper">
                 <label for="a-e-email">Email:</label>
-            <input class="input-field event-email-input" type="email" name="event-email" id="a-e-email" placeholder="Email">
+            <input class="input-field activity-email-input" type="email" name="event-email" id="a-e-email" placeholder="Email" required>
             <strong class="email-error">Invalid Email</strong>
             </div>
             <div class="input-wrapper">
                 <label for="a-e-title">Event Title:</label>
-            <input class="input-field event-title-input" type="text" name="event-title" id="a-e-title" placeholder="Event Title">
+            <input class="input-field event-title-input" type="text" name="event-title" id="a-e-title" placeholder="Event Title" required>
             </div>
             <div class="input-wrapper set-top">
                 <label for="a-s-categories">Select a category:</label>
@@ -80,7 +81,7 @@
             <label for="a-file-upload" class="custom-file-upload">
             <i class="fas fa-cloud-upload-alt"></i> Choose File
         </label>
-        <input class="event-file-upload-input" id="a-file-upload" type="file" onchange="displayFiles(this)" multiple />
+        <input class="event-file-upload-input" id="a-file-upload" type="file" onchange="displayFiles(this)" required multiple />
         </div>
         <div class="event-file-list" id="a-file-list"></div>
         <strong class="image-error">You should set an image for your event</strong>
@@ -92,25 +93,25 @@
         <div class="input-container justify-content-lg-between gap-lg-0 gap-4 mt-5">
             <div class="input-wrapper">
                 <label for="a-e-date">Event Date:</label>
-            <input class="input-field" type="date" name="date" id="a-e-date">
+            <input class="input-field" type="date" name="date" id="a-e-date" required>
             </div>
             <div class="input-wrapper">
                 <label for="a-e-time">Event Time:</label>
-            <input class="input-field" type="time" name="time" id="a-e-time">
+            <input class="input-field" type="time" name="time" id="a-e-time" required>
             </div>
             <div class="input-wrapper">
                 <label for="a-e-location">Location:</label>
-            <input class="input-field" type="text" name="location" id="a-e-location" placeholder="e.g Uskudar Univer...">
+            <input class="input-field" type="text" name="location" id="a-e-location" placeholder="e.g Uskudar Univer..." required>
             </div>
             <div class="input-wrapper mt-lg-4">
                 <label for="a-p-number">Phone Number:</label>
-            <input class="input-field event-phone-input" type="text" name="phone number" id="a-p-number" placeholder="e.g +90 (512) 345 678 9">
+            <input class="input-field event-phone-input" type="text" name="phone number" id="a-p-number" placeholder="e.g +90 (512) 345 678 9" required>
             <strong class="phone-error">Invalid Number</strong>
             </div>
         </div>
         <h6>Event Description:</h6>
         <div class="description-container">
-            <textarea class="input-field event-description-input" name="description" id="a-e-description" placeholder="e.g The goal of this event..."></textarea>
+            <textarea class="input-field event-description-input" name="description" id="a-e-description" placeholder="e.g The goal of this event..." required></textarea>
             <strong class="description-error">The Description should be between 300-4000 letter</strong>
         </div>
         <button onclick="checkEventFormAndConfirm()" type="button" class="send-request-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit Request</button>
